--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@crookse/smart-weaver-contract-chained",
   "version": "0.0.1",
-  "description": "Provider of patternized SmartWeave workflows",
+  "description": "SmartWeaver contract implementation with a chained methods API",
   "author": "Eric Crooks <eric.crooks.github@gmail.com> (https://crookse.com)",
   "license": "GPL-3.0",
   "scripts": {
@@ -31,6 +31,6 @@
     "vitest": "^0.34.6"
   },
   "dependencies": {
-    "@crookse/smart-weaver": "~0.0.12"
+    "@crookse/smart-weaver": "~0.0.13"
   }
 }
