--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,6 @@
     "strict": true,
     "target": "es2017"
   },
+  "include": ["./src", "./tests"],
   "exclude": ["node_modules", "_unstable"]
 }
