chore: bump version

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@crookse/smart-weaver-contract-slick-contract",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Slick builder APIs for Arweave smart contract creation",
   "author": "Eric Crooks <eric.crooks.github@gmail.com> (https://crookse.com)",
   "license": "GPL-3.0",
   "scripts": {
     "build": "./scripts/build_lib",
     "test": "vitest",
-    "publish:npm": "./scripts/publish_npm"
+    "publish:npm": "git add . && git commit -m 'chore: bump version' && ./scripts/publish_npm"
   },
   "keywords": [
     "arweave",
@@ -31,6 +31,6 @@
     "vitest": "^0.34.6"
   },
   "dependencies": {
-    "@crookse/smart-weaver": "~0.0.17"
+    "@crookse/smart-weaver": "~0.0.18"
   }
 }
