--- a/examples/users-and-posts/package.json
+++ b/examples/users-and-posts/package.json
@@ -2,7 +2,11 @@
   "name": "app",
   "main": "app.js",
   "license": "MIT",
+  "type": "module",
   "dependencies": {
     "@crookse/smart-weaver-contract-slick-contract": "~0.0.5"
+  },
+  "devDependencies": {
+    "@crookse/smart-weaver-client-arweave": "~0.0.3"
   }
 }
