--- a/package.json
+++ b/package.json
@@ -1,13 +1,26 @@
 {
-  "name": "@crookse/smart-weaver-contract-slick-contract",
+  "name": "@smartweaver/slick-contract",
   "version": "0.0.7",
   "description": "Slick builder APIs for Arweave smart contract creation",
   "author": "Eric Crooks <eric.crooks.github@gmail.com> (https://crookse.com)",
   "license": "GPL-3.0",
-  "scripts": {
-    "build": "./scripts/build_lib",
-    "test": "vitest",
-    "publish:npm": "git add . && git commit -m 'chore: bump version' && ./scripts/publish_npm"
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/smartweaver/slick-contract.git"
+  },
+  "type": "module",
+  "bin": "./bin/cli.js",
+  "dependencies": {
+    "@smartweaver/core": "0.x"
+  },
+  "devDependencies": {
+    "esbuild": "^0.19.5",
+    "prettier": "^3.0.3",
+    "ts-node": "10.x",
+    "tsup": "7.x",
+    "typescript": "5.x",
+    "vite": "4.x",
+    "vitest": "0.x"
   },
   "keywords": [
     "arweave",
@@ -23,14 +36,5 @@
     "smart-contracts",
     "smartweave",
     "web3"
-  ],
-  "devDependencies": {
-    "tsup": "^7.2.0",
-    "typescript": "^5.2.2",
-    "vite": "^4.5.0",
-    "vitest": "^0.34.6"
-  },
-  "dependencies": {
-    "@crookse/smart-weaver": "~0.0.18"
-  }
+  ]
 }
