--- a/deno.json
+++ b/deno.json
@@ -21,6 +21,7 @@
     "singleQuote": false,
     "proseWrap": "preserve",
     "include": [
+      "./bin",
       "./src",
       "./scripts",
       "./tests",
