--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   "type": "module",
   "bin": "./bin/cli.js",
   "dependencies": {
-    "@smartweaver/core": "0.x",
-    "esbuild": "0.x",
-    "prettier": "3.x"
+    "@smartweaver/core": "~0.0.2",
+    "esbuild": "~0.19.10",
+    "prettier": "~3.1.1"
   },
   "devDependencies": {
-    "ts-node": "10.x",
-    "tsup": "7.x",
-    "typescript": "5.x",
-    "vite": "4.x",
-    "vitest": "0.x"
+    "ts-node": "~10.9.2",
+    "tsup": "~7.2.0",
+    "typescript": "~5.3.3",
+    "vite": "~4.5.1",
+    "vitest": "~0.34.6"
   },
   "keywords": [
     "arweave",
